[package]
name = "radish"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Framework
good-web-game = {version = "0.6"}
# UI
mooeye = {git = "https://github.com/Linus-Mussmaecher/mooeye-web"}
# ECS
legion = {version = "^0.4", features = ["wasm-bindgen"]}
# Random
getrandom = {version = "0.2", features = ["js"]}
rand = {version = "^0.8"}
# other
tinyvec = "^1.6"
uuid = {version = "1.4", features = ["v4", "wasm-bindgen"]}